Windows 32bit build build errors/warnings in hotspot

XMLWordPrintable

    • b15
    • windows

        Windows 32bit, debug build shows various errors and warnings:

        - "C4172: returning address of local variable or temporary" on address os::current_stack_pointer()

        - cast errors in ClassFileParser::parse_constant_pool_entries

        - weird narrowing warning in vmStructs.cpp when storing markOopDesc::hash_mask_in_place in a uint64_t

              Assignee:
              Thomas Stuefe
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: