8221408: Windows 32bit build build errors/warnings in hotspot

Reviewed-by: kbarrett, dholmes